--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
     <module>cloud-consumer-payment80</module>
     <module>commons</module>
     <module>cloud-eureka-server</module>
+    <module>cloude-provider-payment8002</module>
+    <module>cloud-eureka-server7002</module>
+
   </modules>
   <packaging>pom</packaging>
 
